# OpenXR-SDK-Source

./: .gitignore  .gitmodules  README.md
src/api_layers/: CMakeLists.txt
src/loader/: CMakeLists.txt
src/tests/: CMakeLists.txt
src/tests/hello_xr/: AndroidManifest.xml  CMakeLists.txt  GLMPose.cpp  GLMPose.h  build.gradle  defines.h  gaze_calibration.cpp  gaze_calibration.h  geometry.h  graphicsplugin.h  graphicsplugin_d3d11.cpp  graphicsplugin_d3d12.cpp  graphicsplugin_opengl.cpp  graphicsplugin_opengles.cpp  graphicsplugin_vulkan.cpp  main.cpp  openxr_program.cpp  openxr_program.h  options.h  pch.h  psvr2_eye_tracking.cpp  psvr2_eye_tracking.h  utils.cpp  utils.h
src/tests/hello_xr/vulkan_shaders/: frag.glsl  frag_hdr.glsl  vert.glsl
src/tests/list_json/: CMakeLists.txt
src/tests/loader_test/: CMakeLists.txt
src/tests/ok_cloud_streamer/: AndroidManifest.xml  CMakeLists.txt  build.gradle  graphicsplugin_opengles.cpp  graphicsplugin_vulkan.cpp  logger.cpp  main.cpp  ok_cloud_streamer.1  openxr_program.cpp  openxr_program.h  pch.h  utils.cpp  utils.h
src/tests/ok_cloud_streamer/CloudXR/Server-Experimental/Include/: CloudXRCommon.h  CloudXRInputEvents.h  CloudXRServer.h
src/tests/ok_cloud_streamer/CloudXR/Server-Experimental/Lib/Linux/amd64/: libcudart.so.10.2  libssl.so.1.1
